Closed
Bug 1237806
Opened 5 years ago
Closed 5 years ago
Intermittent test_BufferingWait_mp4.html | Test timed out.
Categories
(Core :: Audio/Video: Playback, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla46
People
(Reporter: KWierso, Assigned: jwwang)
References
Details
(Keywords: intermittent-failure)
Attachments
(1 file)
58 bytes,
text/x-review-board-request
|
jya
:
review+
Sylvestre
:
approval-mozilla-esr45+
|
Details |
Assignee | ||
Comment 1•5 years ago
|
||
44875 INFO Got a waiting event at 2.356824 which is smaller than 2.36843. (https://hg.mozilla.org/mozilla-central/file/c33f30666b37dbceffb9fbe5089a668db8893a85/dom/media/mediasource/test/test_BufferingWait_mp4.html#l53) This timeout is not caused by the prerolling bug 1238347 because currentTime is greater than 1.57895 which means playback must have been started.
No longer depends on: 1238347
Assignee | ||
Comment 2•5 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=20d1fde10638&selectedJob=15265328 It can be easily reproduced by changing the interval of MDSM::UpdatePlaybackPositionPeriodically(). (https://hg.mozilla.org/try/rev/02b78f59ac82) The fix is simple. We just need to update playback position again before entering BUFFERING mode so the currentTime of the media element would be more accurate.
Assignee: nobody → jwwang
Assignee | ||
Comment 3•5 years ago
|
||
try: https://treeherder.mozilla.org/#/jobs?repo=try&revision=bb5a09ea7270
Assignee | ||
Comment 4•5 years ago
|
||
This should also address the problem in bug 1229987 comment 23.
Assignee | ||
Comment 5•5 years ago
|
||
Review commit: https://reviewboard.mozilla.org/r/30297/diff/#index_header See other reviews: https://reviewboard.mozilla.org/r/30297/
Attachment #8706264 -
Flags: review?(jyavenard)
Updated•5 years ago
|
Priority: -- → P2
Comment 6•5 years ago
|
||
Comment on attachment 8706264 [details] MozReview Request: Bug 1237806 - update playback position before entering buffering mode so the currentTime of the media element is more accurate during buffering. r=jya. mozreview crashes whenever i attempt to r+ it..
Attachment #8706264 -
Flags: review?(jyavenard) → review+
Assignee | ||
Comment 7•5 years ago
|
||
Thanks for the review!
Comment 9•5 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/7ea8e549a96f
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox46:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla46
Comment 10•5 years ago
|
||
JW: is your playback position fix something we should uplift to Aurora 45? Can this problem affect real world content?
Flags: needinfo?(jwwang)
Comment 12•5 years ago
|
||
Please request esr45 approval on this, assuming the risk is sufficiently low (OrangeFactor confirms that 45 is still hitting this failure intermittently).
Assignee | ||
Comment 13•5 years ago
|
||
Comment on attachment 8706264 [details] MozReview Request: Bug 1237806 - update playback position before entering buffering mode so the currentTime of the media element is more accurate during buffering. r=jya. [Approval Request Comment] User impact if declined:Intermittent test case failures which bother Sheriff and QA Fix Landed on Version:46 Risk to taking this patch (and alternatives if risky): Low. The change is very simple. String or UUID changes made by this patch: none
Flags: needinfo?(jwwang)
Attachment #8706264 -
Flags: approval-mozilla-esr45?
Comment hidden (Intermittent Failures Robot) |
Assignee | ||
Comment 15•5 years ago
|
||
(In reply to OrangeFactor Robot from comment #14) > 34 automation job failures were associated with this bug yesterday. > > Repository breakdown: > * mozilla-inbound: 28 > * fx-team: 5 > * mozilla-central: 1 > > Platform breakdown: > * windows7-32: 21 > * windows8-64: 13 > > For more details, see: > https://brasstacks.mozilla.com/orangefactor/ > ?display=Bug&bugid=1237806&startday=2016-03-21&endday=2016-03-21&tree=all checking...
Assignee | ||
Comment 16•5 years ago
|
||
(In reply to OrangeFactor Robot from comment #14) > 34 automation job failures were associated with this bug yesterday. > > Repository breakdown: > * mozilla-inbound: 28 > * fx-team: 5 > * mozilla-central: 1 > > Platform breakdown: > * windows7-32: 21 > * windows8-64: 13 > > For more details, see: > https://brasstacks.mozilla.com/orangefactor/ > ?display=Bug&bugid=1237806&startday=2016-03-21&endday=2016-03-21&tree=all Some of recent timeouts are caused by bug 1258627.
Depends on: 1258627
Comment 17•5 years ago
|
||
(In reply to JW Wang [:jwwang] from comment #16) > (In reply to OrangeFactor Robot from comment #14) > > 34 automation job failures were associated with this bug yesterday. > > > > Repository breakdown: > > * mozilla-inbound: 28 > > * fx-team: 5 > > * mozilla-central: 1 > > > > Platform breakdown: > > * windows7-32: 21 > > * windows8-64: 13 > > > > For more details, see: > > https://brasstacks.mozilla.com/orangefactor/ > > ?display=Bug&bugid=1237806&startday=2016-03-21&endday=2016-03-21&tree=all > > Some of recent timeouts are caused by bug 1258627. this is getting very frequent
Flags: needinfo?(jwwang)
Comment hidden (Intermittent Failures Robot) |
Assignee | ||
Comment 19•5 years ago
|
||
Some other timeouts are caused by bug 1258922. debugging...
Depends on: 1258922
Flags: needinfo?(jwwang)
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Updated•5 years ago
|
Component: Audio/Video → Audio/Video: Playback
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment 26•5 years ago
|
||
Comment on attachment 8706264 [details] MozReview Request: Bug 1237806 - update playback position before entering buffering mode so the currentTime of the media element is more accurate during buffering. r=jya. Simplify the life of sheriff, taking it. Should be in 45.1.0
Attachment #8706264 -
Flags: approval-mozilla-esr45? → approval-mozilla-esr45+
Reporter | ||
Comment 27•5 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-esr45/rev/ef722522ea0c
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment 30•5 years ago
|
||
What has happened in the past week for those to come back?
Flags: needinfo?(gsquelart)
Comment 31•5 years ago
|
||
It looks like playback didn't resume after data was added after the first 'waiting' event. In the past week there are only 4 occurrences within 4 hours of each other on 28 June. The best candidate is bug 1281115 (add SetSeekThreshold for ffmpeg), which landed just before that and was backed-out shortly after for causing other timeouts. So we're probably in the clear now. I'll add a note in bug 1281115 to watch out for this timeout too.
Flags: needinfo?(gsquelart)
Assignee | ||
Comment 32•5 years ago
|
||
https://treeherder.mozilla.org/logviewer.html#?repo=mozilla-inbound&job_id=30771818#L2935 Decoder=111824a0 GetMediaTime=1623945 GetClock=1623945 mState=DECODING mPlayState=3 mDecodingFirstFrame=0 IsPlaying=0 mAudioStatus=waiting mVideoStatus=pending mDecodedAudioEndTime=2414873 mDecodedVideoEndTime=1696666 mIsAudioPrerolling=0 mIsVideoPrerolling=1: Playback is not started because video is prerolling which is because of the pending video request (mVideoStatus=pending). We should check why the video request is not resolved.
Comment 33•5 years ago
|
||
I don't see how it could be related to bug 12811115. That bug is ffmpeg related. 3 of the failures were on Windows where ffmpeg isn't used (and the test is about MP4)
You need to log in
before you can comment on or make changes to this bug.
Description
•